# fastapi_tutorial

./: .gitignore  Dockerfile  Procfile  README.md  app.py  banknote_classifier.pkl  books.db  main.py  model_training.py  pyproject.toml
bank_note/: app.py
banknote/: app.py  notes.py
