[tool.poetry]
name = "fastapi_tutorial"
version = "0.1.0"
description = "Fast API ML/DL deployment projects."
authors = ["Ashutosh Shukla <ashu17188@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.61.0"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3.23   "
numpy = "^1.20.1"
scikit-learn = "^0.24.1"
scipy = "^1.6.1"
pandas = "^1.2.3"
pickleshare = "^0.7.5"
[tool.poetry.dev-dependencies]
pytest = "^5.4.2"
requests = "^2.24.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
